<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cats Collection</string>
    <string name="cats_collection">Cats Collection</string>
    <string name="search_by_tag">Search by tag...</string>
    <string name="enter_tag">Enter tag (optional)</string>
    <string name="add_cat">Add Cat</string>
    <string name="no_cats_found">No cats found. Add one to get started!</string>
    <string name="cat_image">Cat image</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
</resources>
